idk fixes and shit i guess

--- a/localisation/french/MD_focus_TUR_l_french.yml
+++ b/localisation/french/MD_focus_TUR_l_french.yml
@@ -1099,38 +1099,38 @@
  TUR_victory_over_mafia: "§PEradicate the Mafia§!"
  TUR_mafia_influence_mechanic: "Global Missions"
  TUR_mafia_influence_mechanic_desc: "§PThe Turkish Mafias§! has proven itself to be more than just a domestic group of gang members, it is much more than that. §HThe Turkish Mafia has ties and influence all over the world§!, but more so in certain places than others. Through the use of the Turkish diaspora, the Turkish Mafia is able to §Hgain support§! and §Hinfluence§! over other nations, and use them to prop up new §PMafia-Proxies§!. Doing this will let the §HTurkish Mafia§! pull strings in governments globally, and even in some cases, §Roverthrow them§!.\n\nAs indicated by the visuals below, the §Hhigher the Mafia influence§! in certain countries, the more control they have. If Mafia influence is §Rlow§!, then the Mafia is §Runable§! to do anything drastic. But if the §HMafia influence is high§!, there are §Ga lot§! more options.\n\n§HInfluence in the UK§!: §G[?mafia_uk|%]§!\n§HInfluence in Germany§!: §G[?mafia_germany|%]§!\n§HInfluence in the Netherlands§!: §G[?mafia_holland|%]§!\n§HInfluence in Australia§!: §G[?mafia_australia|%]§!\n§HInfluence in Belgium§!: §G[?mafia_belgium|%]§!\n\nNo color - Low Influence\n§YYellow§! - Some influence\n§RRed§! - A lot of influence\n"
- TUR_start_eng_operations: "Start operations in the United Kingdom"
- TUR_close_eng_operations: "End operations in the United Kingdom"
+ TUR_start_eng_operations: "Start Operations in the United Kingdom"
+ TUR_close_eng_operations: "End Operations in the United Kingdom"
  TUR_boost_british_firms: "Boost British firms"
  TUR_fund_ira: "Fund separatists"
  TUR_sow_division: "Sow divsion with in politics"
  TUR_shatter_the_kingdom: "§PShatter the Kingdom§!"
- TUR_start_ger_operations: "Start operations in Germany"
- TUR_close_ger_operations: "End operations in Germany"
- TUR_gray_wolves_networks: "Expand Gray-Wolves networks"
- TUR_commit_vehicle_rob: "Smuggle out Germany vehicles"
- TUR_attack_german_politics: "Find corrupt statesmen"
- TUR_take_german_industries: "§PTake control of key industrial sectors§!"
+ TUR_start_ger_operations: "Start Operations in Germany"
+ TUR_close_ger_operations: "End Operations in Germany"
+ TUR_gray_wolves_networks: "Expand Gray-Wolves Networks"
+ TUR_commit_vehicle_rob: "Smuggle out Germany Vehicles"
+ TUR_attack_german_politics: "Find Corrupt Statesmen"
+ TUR_take_german_industries: "§PTake Control of Key Industrial Sectors§!"
  TUR_take_german_industries_desc: "Due to the high amount of corruption in German politics, we are able to easily cease important industrial sectors for our own needs."
- TUR_start_hol_operations: "Start operations in the Netherlands"
- TUR_close_hol_operations: "End operations in the Netherlands"
+ TUR_start_hol_operations: "Start Operations in the Netherlands"
+ TUR_close_hol_operations: "End Operations in the Netherlands"
  TUR_establish_drug_networks_rotterdam: "Expand drug networks"
- TUR_sieze_goods_from_ports: "Steal goods from Ports"
- TUR_decrease_policing_holland: "Attack police funding"
- TUR_largest_drug_network: "§PEstablish the grand drug hub§!"
- TUR_start_aus_operations: "Start operations in Australia"
- TUR_close_aus_operations: "End operations in Australia"
- TUR_boost_honoured_society: "Agitate the honoured society"
- TUR_target_aussie_welfare: "Attack Australian standard of living"
- TUR_spread_hatred_indonesia: "Start rumours between Indonesia"
- TUR_watch_the_conflict: "§PSteal Australian treasure§!"
+ TUR_sieze_goods_from_ports: "Steal Goods From Ports"
+ TUR_decrease_policing_holland: "Attack Police Funding"
+ TUR_largest_drug_network: "§PEstablish the Grand Drug Gub§!"
+ TUR_start_aus_operations: "Start Operations in Australia"
+ TUR_close_aus_operations: "End Operations in Australia"
+ TUR_boost_honoured_society: "Agitate the Honoured Society"
+ TUR_target_aussie_welfare: "Attack Australian Standard of Living"
+ TUR_spread_hatred_indonesia: "Start Rumours Between Indonesia"
+ TUR_watch_the_conflict: "§PSteal Australian Treasure§!"
  TUR_watch_the_conflict_desc: "Using our connections and influence, we will steal Australian precious metals and use them for our own goods."
- TUR_start_bel_operations: "Start operations in Belgium"
- TUR_close_bel_operations: "End operations in Belgium"
- TUR_fund_bel_mafia: "Win over Belgian criminals"
- TUR_steal_crucial_info: "Steal scientific data"
- TUR_strings_in_belgian_govt: "Pull strings in the Belgian government"
- TUR_our_puppets: "§PFly out important Belgian researchers§!"
+ TUR_start_bel_operations: "Start Operations in Belgium"
+ TUR_close_bel_operations: "End Operations in Belgium"
+ TUR_fund_bel_mafia: "Win Over Belgian Criminals"
+ TUR_steal_crucial_info: "Steal Scientific Data"
+ TUR_strings_in_belgian_govt: "Pull Strings in the Belgian Government"
+ TUR_our_puppets: "§PFly out important Belgian Researchers§!"
  TUR_our_puppets_desc: "By flying out important Belgian researchers, we are able to use them in Turkey for our own good."
  TUR_hire_gulenist_economic_advisors: "Hire Gülenist Economic Advisors"
  TUR_hire_gulenist_economic_advisors_desc: "Drawing from a large pool of international professionals, we can hire expert economists to advise our government on how to run the economy"
