--- a/Changelog.txt
+++ b/Changelog.txt
@@ -46,6 +46,7 @@ v1.10.2
   - Fixed the Small Arms Manufacturer being available to Greece
   - Fixed the European Parliament Timer not working as intended
   - Fixed the idea ETA not being present on game start for Spain
+  - Fixed a localization error where the Hezbollah Border War with Israel would give you Shia related descriptions despite being Israel
 
  Content:
   - New building "Commercialized Agriculture District"
