Finished Afghanistan War Mechanic and OOBs

--- a/localisation/english/MD_focus_AST_l_english.yml
+++ b/localisation/english/MD_focus_AST_l_english.yml
@@ -89,10 +89,11 @@ l_english:
  AST_attack_class2_effect_tt: "The US will commandeer the submarines." #Not really
  australia_md.7.tt: "Will deploy §Y3§! Hobart-Class Air Warfare Destroyers in §Y180§! days."
  AST_attack_class2_effect2_tt: "France will commandeer the submarines." #Not really
- AST_afghanistan_involvement_warning_tt: "\nThe war in §GAfghanistan§! is a guerilla conflict, and dire consequences could result from our involvement if we aren't careful in choosing our intervention forces. If sent to §GAfghanistan§!, our boys will serve a tour of §Y2 years§! after §Y80 days§! of training in boot camp."
+ AST_afghanistan_involvement_warning_tt: "\nDire consequences could result from an involvement in [AFG.GetFlag]§GAfghanistan§! if we aren't careful in choosing our intervention forces. If sent to [AFG.GetFlag]§GAfghanistan§!, our boys will serve a tour of §Y2 years§! after §Y80 days§! of training in boot camp."
  AST_2_level_simone_wilkie_TT: "Will add §H2 Skill Levels§! to §HSimone Wilkie§!"
  AST_2_level_david_hurley_TT: "Will add §H2 Skill Levels§! to §HDavid Hurley§!"
  AST_2_level_shane_caughey_TT: "Will add §H2 Skill Levels§! to §HShane Caughey§!"
+ AST_afghanistan_TT: "Our boys are shipped off to [AFG.GetFlag]§GAfghanistan§!"
 
 #Tech Boosts
  AST_anzac-class: "Anzac-Class Advancements"
@@ -834,6 +835,8 @@ l_english:
  #army
  AST_RAA_Modernization: "RAA Modernisation"
  AST_RAA_Modernization_desc: ""
+ AST_Pitch_In_The_Afghanistan_War: "Pitch in With The War in Afghanistan"
+ AST_Pitch_In_The_Afghanistan_War_desc: ""
  AST_Land_400: "Land 400"
  AST_Land_400_desc: ""
  AST_Land_8116: "Land 8116"
