Added code for wonders
Added basic code for monuments

--- a/localisation/english/monument_effects_l_english.yml
+++ b/localisation/english/monument_effects_l_english.yml
@@ -949,3 +949,224 @@
  MONUMENT_1010_LEVEL_2_BONUS: "$MONUMENT_STATE_BONUS$"
  MONUMENT_1010_LEVEL_3_BONUS: "$MONUMENT_STATE_BONUS$"
 
+ MONUMENT_1011_LEVEL_0_BONUS: "$MONUMENT_BONUS_NONE$"
+ MONUMENT_1011_LEVEL_1_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1011_LEVEL_2_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1011_LEVEL_3_BONUS: "$MONUMENT_STATE_BONUS$"
+
+ MONUMENT_1012_LEVEL_0_BONUS: "$MONUMENT_BONUS_NONE$"
+ MONUMENT_1012_LEVEL_1_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1012_LEVEL_2_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1012_LEVEL_3_BONUS: "$MONUMENT_STATE_BONUS$"
+
+ MONUMENT_1013_LEVEL_0_BONUS: "$MONUMENT_BONUS_NONE$"
+ MONUMENT_1013_LEVEL_1_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1013_LEVEL_2_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1013_LEVEL_3_BONUS: "$MONUMENT_STATE_BONUS$"
+
+ MONUMENT_1014_LEVEL_0_BONUS: "$MONUMENT_BONUS_NONE$"
+ MONUMENT_1014_LEVEL_1_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1014_LEVEL_2_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1014_LEVEL_3_BONUS: "$MONUMENT_STATE_BONUS$"
+
+ MONUMENT_1015_LEVEL_0_BONUS: "$MONUMENT_BONUS_NONE$"
+ MONUMENT_1015_LEVEL_1_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1015_LEVEL_2_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1015_LEVEL_3_BONUS: "$MONUMENT_STATE_BONUS$"
+
+ MONUMENT_1016_LEVEL_0_BONUS: "$MONUMENT_BONUS_NONE$"
+ MONUMENT_1016_LEVEL_1_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1016_LEVEL_2_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1016_LEVEL_3_BONUS: "$MONUMENT_STATE_BONUS$"
+
+ MONUMENT_1017_LEVEL_0_BONUS: "$MONUMENT_BONUS_NONE$"
+ MONUMENT_1017_LEVEL_1_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1017_LEVEL_2_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1017_LEVEL_3_BONUS: "$MONUMENT_STATE_BONUS$"
+
+ MONUMENT_1018_LEVEL_0_BONUS: "$MONUMENT_BONUS_NONE$"
+ MONUMENT_1018_LEVEL_1_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1018_LEVEL_2_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1018_LEVEL_3_BONUS: "$MONUMENT_STATE_BONUS$"
+
+ MONUMENT_1019_LEVEL_0_BONUS: "$MONUMENT_BONUS_NONE$"
+ MONUMENT_1019_LEVEL_1_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1019_LEVEL_2_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1019_LEVEL_3_BONUS: "$MONUMENT_STATE_BONUS$"
+
+ MONUMENT_1020_LEVEL_0_BONUS: "$MONUMENT_BONUS_NONE$"
+ MONUMENT_1020_LEVEL_1_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1020_LEVEL_2_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1020_LEVEL_3_BONUS: "$MONUMENT_STATE_BONUS$"
+
+ MONUMENT_1021_LEVEL_0_BONUS: "$MONUMENT_BONUS_NONE$"
+ MONUMENT_1021_LEVEL_1_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1021_LEVEL_2_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1021_LEVEL_3_BONUS: "$MONUMENT_STATE_BONUS$"
+
+ MONUMENT_1022_LEVEL_0_BONUS: "$MONUMENT_BONUS_NONE$"
+ MONUMENT_1022_LEVEL_1_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1022_LEVEL_2_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1022_LEVEL_3_BONUS: "$MONUMENT_STATE_BONUS$"
+
+ MONUMENT_1023_LEVEL_0_BONUS: "$MONUMENT_BONUS_NONE$"
+ MONUMENT_1023_LEVEL_1_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1023_LEVEL_2_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1023_LEVEL_3_BONUS: "$MONUMENT_STATE_BONUS$"
+
+ MONUMENT_1024_LEVEL_0_BONUS: "$MONUMENT_BONUS_NONE$"
+ MONUMENT_1024_LEVEL_1_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1024_LEVEL_2_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1024_LEVEL_3_BONUS: "$MONUMENT_STATE_BONUS$"
+
+ MONUMENT_1025_LEVEL_0_BONUS: "$MONUMENT_BONUS_NONE$"
+ MONUMENT_1025_LEVEL_1_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1025_LEVEL_2_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1025_LEVEL_3_BONUS: "$MONUMENT_STATE_BONUS$"
+
+ MONUMENT_1026_LEVEL_0_BONUS: "$MONUMENT_BONUS_NONE$"
+ MONUMENT_1026_LEVEL_1_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1026_LEVEL_2_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1026_LEVEL_3_BONUS: "$MONUMENT_STATE_BONUS$"
+
+ MONUMENT_1027_LEVEL_0_BONUS: "$MONUMENT_BONUS_NONE$"
+ MONUMENT_1027_LEVEL_1_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1027_LEVEL_2_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1027_LEVEL_3_BONUS: "$MONUMENT_STATE_BONUS$"
+
+ MONUMENT_1028_LEVEL_0_BONUS: "$MONUMENT_BONUS_NONE$"
+ MONUMENT_1028_LEVEL_1_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1028_LEVEL_2_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1028_LEVEL_3_BONUS: "$MONUMENT_STATE_BONUS$"
+
+ MONUMENT_1029_LEVEL_0_BONUS: "$MONUMENT_BONUS_NONE$"
+ MONUMENT_1029_LEVEL_1_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1029_LEVEL_2_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1029_LEVEL_3_BONUS: "$MONUMENT_STATE_BONUS$"
+
+ MONUMENT_1030_LEVEL_0_BONUS: "$MONUMENT_BONUS_NONE$"
+ MONUMENT_1030_LEVEL_1_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1030_LEVEL_2_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1030_LEVEL_3_BONUS: "$MONUMENT_STATE_BONUS$"
+
+ MONUMENT_1031_LEVEL_0_BONUS: "$MONUMENT_BONUS_NONE$"
+ MONUMENT_1031_LEVEL_1_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1031_LEVEL_2_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1031_LEVEL_3_BONUS: "$MONUMENT_STATE_BONUS$"
+
+ MONUMENT_1032_LEVEL_0_BONUS: "$MONUMENT_BONUS_NONE$"
+ MONUMENT_1032_LEVEL_1_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1032_LEVEL_2_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1032_LEVEL_3_BONUS: "$MONUMENT_STATE_BONUS$"
+
+ MONUMENT_1033_LEVEL_0_BONUS: "$MONUMENT_BONUS_NONE$"
+ MONUMENT_1033_LEVEL_1_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1033_LEVEL_2_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1033_LEVEL_3_BONUS: "$MONUMENT_STATE_BONUS$"
+
+ MONUMENT_1034_LEVEL_0_BONUS: "$MONUMENT_BONUS_NONE$"
+ MONUMENT_1034_LEVEL_1_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1034_LEVEL_2_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1034_LEVEL_3_BONUS: "$MONUMENT_STATE_BONUS$"
+
+ MONUMENT_1035_LEVEL_0_BONUS: "$MONUMENT_BONUS_NONE$"
+ MONUMENT_1035_LEVEL_1_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1035_LEVEL_2_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1035_LEVEL_3_BONUS: "$MONUMENT_STATE_BONUS$"
+
+ MONUMENT_1036_LEVEL_0_BONUS: "$MONUMENT_BONUS_NONE$"
+ MONUMENT_1036_LEVEL_1_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1036_LEVEL_2_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1036_LEVEL_3_BONUS: "$MONUMENT_STATE_BONUS$"
+
+ MONUMENT_1037_LEVEL_0_BONUS: "$MONUMENT_BONUS_NONE$"
+ MONUMENT_1037_LEVEL_1_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1037_LEVEL_2_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1037_LEVEL_3_BONUS: "$MONUMENT_STATE_BONUS$"
+
+ MONUMENT_1038_LEVEL_0_BONUS: "$MONUMENT_BONUS_NONE$"
+ MONUMENT_1038_LEVEL_1_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1038_LEVEL_2_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1038_LEVEL_3_BONUS: "$MONUMENT_STATE_BONUS$"
+
+ MONUMENT_1039_LEVEL_0_BONUS: "$MONUMENT_BONUS_NONE$"
+ MONUMENT_1039_LEVEL_1_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1039_LEVEL_2_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1039_LEVEL_3_BONUS: "$MONUMENT_STATE_BONUS$"
+
+ MONUMENT_1040_LEVEL_0_BONUS: "$MONUMENT_BONUS_NONE$"
+ MONUMENT_1040_LEVEL_1_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1040_LEVEL_2_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1040_LEVEL_3_BONUS: "$MONUMENT_STATE_BONUS$"
+
+ MONUMENT_1041_LEVEL_0_BONUS: "$MONUMENT_BONUS_NONE$"
+ MONUMENT_1041_LEVEL_1_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1041_LEVEL_2_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1041_LEVEL_3_BONUS: "$MONUMENT_STATE_BONUS$"
+
+ MONUMENT_1042_LEVEL_0_BONUS: "$MONUMENT_BONUS_NONE$"
+ MONUMENT_1042_LEVEL_1_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1042_LEVEL_2_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1042_LEVEL_3_BONUS: "$MONUMENT_STATE_BONUS$"
+
+ MONUMENT_1043_LEVEL_0_BONUS: "$MONUMENT_BONUS_NONE$"
+ MONUMENT_1043_LEVEL_1_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1043_LEVEL_2_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1043_LEVEL_3_BONUS: "$MONUMENT_STATE_BONUS$"
+
+ MONUMENT_1044_LEVEL_0_BONUS: "$MONUMENT_BONUS_NONE$"
+ MONUMENT_1044_LEVEL_1_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1044_LEVEL_2_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1044_LEVEL_3_BONUS: "$MONUMENT_STATE_BONUS$"
+
+ MONUMENT_1045_LEVEL_0_BONUS: "$MONUMENT_BONUS_NONE$"
+ MONUMENT_1045_LEVEL_1_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1045_LEVEL_2_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1045_LEVEL_3_BONUS: "$MONUMENT_STATE_BONUS$"
+
+ MONUMENT_1046_LEVEL_0_BONUS: "$MONUMENT_BONUS_NONE$"
+ MONUMENT_1046_LEVEL_1_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1046_LEVEL_2_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1046_LEVEL_3_BONUS: "$MONUMENT_STATE_BONUS$"
+
+ MONUMENT_1047_LEVEL_0_BONUS: "$MONUMENT_BONUS_NONE$"
+ MONUMENT_1047_LEVEL_1_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1047_LEVEL_2_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1047_LEVEL_3_BONUS: "$MONUMENT_STATE_BONUS$"
+
+ MONUMENT_1048_LEVEL_0_BONUS: "$MONUMENT_BONUS_NONE$"
+ MONUMENT_1048_LEVEL_1_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1048_LEVEL_2_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1048_LEVEL_3_BONUS: "$MONUMENT_STATE_BONUS$"
+
+ MONUMENT_1049_LEVEL_0_BONUS: "$MONUMENT_BONUS_NONE$"
+ MONUMENT_1049_LEVEL_1_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1049_LEVEL_2_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1049_LEVEL_3_BONUS: "$MONUMENT_STATE_BONUS$"
+
+ MONUMENT_1050_LEVEL_0_BONUS: "$MONUMENT_BONUS_NONE$"
+ MONUMENT_1050_LEVEL_1_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1050_LEVEL_2_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1050_LEVEL_3_BONUS: "$MONUMENT_STATE_BONUS$"
+
+ MONUMENT_1051_LEVEL_0_BONUS: "$MONUMENT_BONUS_NONE$"
+ MONUMENT_1051_LEVEL_1_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1051_LEVEL_2_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1051_LEVEL_3_BONUS: "$MONUMENT_STATE_BONUS$"
+
+ MONUMENT_1052_LEVEL_0_BONUS: "$MONUMENT_BONUS_NONE$"
+ MONUMENT_1052_LEVEL_1_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1052_LEVEL_2_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1052_LEVEL_3_BONUS: "$MONUMENT_STATE_BONUS$"
+
+ MONUMENT_1053_LEVEL_0_BONUS: "$MONUMENT_BONUS_NONE$"
+ MONUMENT_1053_LEVEL_1_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1053_LEVEL_2_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1053_LEVEL_3_BONUS: "$MONUMENT_STATE_BONUS$"
+
+ MONUMENT_1054_LEVEL_0_BONUS: "$MONUMENT_BONUS_NONE$"
+ MONUMENT_1054_LEVEL_1_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1054_LEVEL_2_BONUS: "$MONUMENT_STATE_BONUS$"
+ MONUMENT_1054_LEVEL_3_BONUS: "$MONUMENT_STATE_BONUS$"
+
+
