--- a/localisation/english/monuments_mod_l_english.yml
+++ b/localisation/english/monuments_mod_l_english.yml
@@ -1178,4 +1178,189 @@
  monument_1008_level_1_modifier: "$MONUMENT_1008_NAME$"
  monument_1008_level_2_modifier: "$MONUMENT_1008_NAME$"
  monument_1008_level_3_modifier: "$MONUMENT_1008_NAME$"
+ monument_1009_level_0_modifier: "$MONUMENT_1009_NAME$"
+ monument_1009_level_1_modifier: "$MONUMENT_1009_NAME$"
+ monument_1009_level_2_modifier: "$MONUMENT_1009_NAME$"
+ monument_1009_level_3_modifier: "$MONUMENT_1009_NAME$"
+ monument_1010_level_0_modifier: "$MONUMENT_1010_NAME$"
+ monument_1010_level_1_modifier: "$MONUMENT_1010_NAME$"
+ monument_1010_level_2_modifier: "$MONUMENT_1010_NAME$"
+ monument_1010_level_3_modifier: "$MONUMENT_1010_NAME$"
+ monument_1011_level_0_modifier: "$MONUMENT_1011_NAME$"
+ monument_1011_level_1_modifier: "$MONUMENT_1011_NAME$" 
+ monument_1011_level_2_modifier: "$MONUMENT_1011_NAME$"
+ monument_1011_level_3_modifier: "$MONUMENT_1011_NAME$"
+ monument_1012_level_0_modifier: "$MONUMENT_1012_NAME$"
+ monument_1012_level_1_modifier: "$MONUMENT_1012_NAME$"
+ monument_1012_level_2_modifier: "$MONUMENT_1012_NAME$"
+ monument_1012_level_3_modifier: "$MONUMENT_1012_NAME$"
+ monument_1013_level_0_modifier: "$MONUMENT_1013_NAME$"
+ monument_1013_level_1_modifier: "$MONUMENT_1013_NAME$"
+ monument_1013_level_2_modifier: "$MONUMENT_1013_NAME$"
+ monument_1013_level_3_modifier: "$MONUMENT_1013_NAME$"
+ monument_1014_level_0_modifier: "$MONUMENT_1014_NAME$"
+ monument_1014_level_1_modifier: "$MONUMENT_1014_NAME$"
+ monument_1014_level_2_modifier: "$MONUMENT_1014_NAME$"
+ monument_1014_level_3_modifier: "$MONUMENT_1014_NAME$"
+ monument_1015_level_0_modifier: "$MONUMENT_1015_NAME$"
+ monument_1015_level_1_modifier: "$MONUMENT_1015_NAME$"
+ monument_1015_level_2_modifier: "$MONUMENT_1015_NAME$"
+ monument_1015_level_3_modifier: "$MONUMENT_1015_NAME$"
+ monument_1016_level_0_modifier: "$MONUMENT_1016_NAME$"
+ monument_1016_level_1_modifier: "$MONUMENT_1016_NAME$"
+ monument_1016_level_2_modifier: "$MONUMENT_1016_NAME$"
+ monument_1016_level_3_modifier: "$MONUMENT_1016_NAME$"
+ monument_1017_level_0_modifier: "$MONUMENT_1017_NAME$"
+ monument_1017_level_1_modifier: "$MONUMENT_1017_NAME$"
+ monument_1017_level_2_modifier: "$MONUMENT_1017_NAME$"
+ monument_1017_level_3_modifier: "$MONUMENT_1017_NAME$"
+ monument_1018_level_0_modifier: "$MONUMENT_1018_NAME$"
+ monument_1018_level_1_modifier: "$MONUMENT_1018_NAME$"
+ monument_1018_level_2_modifier: "$MONUMENT_1018_NAME$"
+ monument_1018_level_3_modifier: "$MONUMENT_1018_NAME$"
+ monument_1019_level_0_modifier: "$MONUMENT_1019_NAME$"
+ monument_1019_level_1_modifier: "$MONUMENT_1019_NAME$"
+ monument_1019_level_2_modifier: "$MONUMENT_1019_NAME$"
+ monument_1019_level_3_modifier: "$MONUMENT_1019_NAME$"
+ monument_1020_level_0_modifier: "$MONUMENT_1020_NAME$"
+ monument_1020_level_1_modifier: "$MONUMENT_1020_NAME$"
+ monument_1020_level_2_modifier: "$MONUMENT_1020_NAME$"
+ monument_1020_level_3_modifier: "$MONUMENT_1020_NAME$"
+ monument_1021_level_0_modifier: "$MONUMENT_1021_NAME$"
+ monument_1021_level_1_modifier: "$MONUMENT_1021_NAME$"
+ monument_1021_level_2_modifier: "$MONUMENT_1021_NAME$"
+ monument_1021_level_3_modifier: "$MONUMENT_1021_NAME$"
+ monument_1022_level_0_modifier: "$MONUMENT_1022_NAME$"
+ monument_1022_level_1_modifier: "$MONUMENT_1022_NAME$"
+ monument_1022_level_2_modifier: "$MONUMENT_1022_NAME$"
+ monument_1022_level_3_modifier: "$MONUMENT_1022_NAME$"
+ monument_1023_level_0_modifier: "$MONUMENT_1023_NAME$"
+ monument_1023_level_1_modifier: "$MONUMENT_1023_NAME$"
+ monument_1023_level_2_modifier: "$MONUMENT_1023_NAME$"
+ monument_1023_level_3_modifier: "$MONUMENT_1023_NAME$"
+ monument_1024_level_0_modifier: "$MONUMENT_1024_NAME$"
+ monument_1024_level_1_modifier: "$MONUMENT_1024_NAME$"
+ monument_1024_level_2_modifier: "$MONUMENT_1024_NAME$"
+ monument_1024_level_3_modifier: "$MONUMENT_1024_NAME$"
+ monument_1025_level_0_modifier: "$MONUMENT_1025_NAME$"
+ monument_1025_level_1_modifier: "$MONUMENT_1025_NAME$"
+ monument_1025_level_2_modifier: "$MONUMENT_1025_NAME$"
+ monument_1025_level_3_modifier: "$MONUMENT_1025_NAME$"
+ monument_1026_level_0_modifier: "$MONUMENT_1026_NAME$"
+ monument_1026_level_1_modifier: "$MONUMENT_1026_NAME$"
+ monument_1026_level_2_modifier: "$MONUMENT_1026_NAME$"
+ monument_1026_level_3_modifier: "$MONUMENT_1026_NAME$"
+ monument_1027_level_0_modifier: "$MONUMENT_1027_NAME$"
+ monument_1027_level_1_modifier: "$MONUMENT_1027_NAME$"
+ monument_1027_level_2_modifier: "$MONUMENT_1027_NAME$"
+ monument_1027_level_3_modifier: "$MONUMENT_1027_NAME$"
+ monument_1028_level_0_modifier: "$MONUMENT_1028_NAME$"
+ monument_1028_level_1_modifier: "$MONUMENT_1028_NAME$"
+ monument_1028_level_2_modifier: "$MONUMENT_1028_NAME$"
+ monument_1028_level_3_modifier: "$MONUMENT_1028_NAME$"
+ monument_1029_level_0_modifier: "$MONUMENT_1029_NAME$"
+ monument_1029_level_1_modifier: "$MONUMENT_1029_NAME$"
+ monument_1029_level_2_modifier: "$MONUMENT_1029_NAME$"
+ monument_1029_level_3_modifier: "$MONUMENT_1029_NAME$"
+ monument_1030_level_0_modifier: "$MONUMENT_1030_NAME$"
+ monument_1030_level_1_modifier: "$MONUMENT_1030_NAME$"
+ monument_1030_level_2_modifier: "$MONUMENT_1030_NAME$"
+ monument_1030_level_3_modifier: "$MONUMENT_1030_NAME$"
+ monument_1031_level_0_modifier: "$MONUMENT_1031_NAME$"
+ monument_1031_level_1_modifier: "$MONUMENT_1031_NAME$"
+ monument_1031_level_2_modifier: "$MONUMENT_1031_NAME$"
+ monument_1031_level_3_modifier: "$MONUMENT_1031_NAME$"
+ monument_1032_level_0_modifier: "$MONUMENT_1032_NAME$"
+ monument_1032_level_1_modifier: "$MONUMENT_1032_NAME$"
+ monument_1032_level_2_modifier: "$MONUMENT_1032_NAME$"
+ monument_1032_level_3_modifier: "$MONUMENT_1032_NAME$"
+ monument_1033_level_0_modifier: "$MONUMENT_1033_NAME$"
+ monument_1033_level_1_modifier: "$MONUMENT_1033_NAME$"
+ monument_1033_level_2_modifier: "$MONUMENT_1033_NAME$"
+ monument_1033_level_3_modifier: "$MONUMENT_1033_NAME$"
+ monument_1034_level_0_modifier: "$MONUMENT_1034_NAME$"
+ monument_1034_level_1_modifier: "$MONUMENT_1034_NAME$"
+ monument_1034_level_2_modifier: "$MONUMENT_1034_NAME$"
+ monument_1034_level_3_modifier: "$MONUMENT_1034_NAME$"
+ monument_1035_level_0_modifier: "$MONUMENT_1035_NAME$"
+ monument_1035_level_1_modifier: "$MONUMENT_1035_NAME$"
+ monument_1035_level_2_modifier: "$MONUMENT_1035_NAME$"
+ monument_1035_level_3_modifier: "$MONUMENT_1035_NAME$"
+ monument_1036_level_0_modifier: "$MONUMENT_1036_NAME$"
+ monument_1036_level_1_modifier: "$MONUMENT_1036_NAME$"
+ monument_1036_level_2_modifier: "$MONUMENT_1036_NAME$"
+ monument_1036_level_3_modifier: "$MONUMENT_1036_NAME$"
+ monument_1037_level_0_modifier: "$MONUMENT_1037_NAME$"
+ monument_1037_level_1_modifier: "$MONUMENT_1037_NAME$"
+ monument_1037_level_2_modifier: "$MONUMENT_1037_NAME$"
+ monument_1037_level_3_modifier: "$MONUMENT_1037_NAME$"
+ monument_1038_level_0_modifier: "$MONUMENT_1038_NAME$"
+ monument_1038_level_1_modifier: "$MONUMENT_1038_NAME$"
+ monument_1038_level_2_modifier: "$MONUMENT_1038_NAME$"
+ monument_1038_level_3_modifier: "$MONUMENT_1038_NAME$"
+ monument_1039_level_0_modifier: "$MONUMENT_1039_NAME$"
+ monument_1039_level_1_modifier: "$MONUMENT_1039_NAME$"
+ monument_1039_level_2_modifier: "$MONUMENT_1039_NAME$"
+ monument_1039_level_3_modifier: "$MONUMENT_1039_NAME$"
+ monument_1040_level_0_modifier: "$MONUMENT_1040_NAME$"
+ monument_1040_level_1_modifier: "$MONUMENT_1040_NAME$"
+ monument_1040_level_2_modifier: "$MONUMENT_1040_NAME$"
+ monument_1040_level_3_modifier: "$MONUMENT_1040_NAME$"
+ monument_1041_level_0_modifier: "$MONUMENT_1041_NAME$"
+ monument_1041_level_1_modifier: "$MONUMENT_1041_NAME$"
+ monument_1041_level_2_modifier: "$MONUMENT_1041_NAME$"
+ monument_1041_level_3_modifier: "$MONUMENT_1041_NAME$"
+ monument_1042_level_0_modifier: "$MONUMENT_1042_NAME$"
+ monument_1042_level_1_modifier: "$MONUMENT_1042_NAME$"
+ monument_1042_level_2_modifier: "$MONUMENT_1042_NAME$"
+ monument_1042_level_3_modifier: "$MONUMENT_1042_NAME$"
+ monument_1043_level_0_modifier: "$MONUMENT_1043_NAME$"
+ monument_1043_level_1_modifier: "$MONUMENT_1043_NAME$"
+ monument_1043_level_2_modifier: "$MONUMENT_1043_NAME$"
+ monument_1043_level_3_modifier: "$MONUMENT_1043_NAME$"
+ monument_1044_level_0_modifier: "$MONUMENT_1044_NAME$"
+ monument_1044_level_1_modifier: "$MONUMENT_1044_NAME$"
+ monument_1044_level_2_modifier: "$MONUMENT_1044_NAME$"
+ monument_1044_level_3_modifier: "$MONUMENT_1044_NAME$"
+ monument_1045_level_0_modifier: "$MONUMENT_1045_NAME$"
+ monument_1045_level_1_modifier: "$MONUMENT_1045_NAME$"
+ monument_1045_level_2_modifier: "$MONUMENT_1045_NAME$"
+ monument_1045_level_3_modifier: "$MONUMENT_1045_NAME$"
+ monument_1046_level_0_modifier: "$MONUMENT_1046_NAME$"
+ monument_1046_level_1_modifier: "$MONUMENT_1046_NAME$"
+ monument_1046_level_2_modifier: "$MONUMENT_1046_NAME$"
+ monument_1046_level_3_modifier: "$MONUMENT_1046_NAME$"
+ monument_1047_level_0_modifier: "$MONUMENT_1047_NAME$"
+ monument_1047_level_1_modifier: "$MONUMENT_1047_NAME$"
+ monument_1047_level_2_modifier: "$MONUMENT_1047_NAME$"
+ monument_1047_level_3_modifier: "$MONUMENT_1047_NAME$"
+ monument_1048_level_0_modifier: "$MONUMENT_1048_NAME$"
+ monument_1048_level_1_modifier: "$MONUMENT_1048_NAME$"
+ monument_1048_level_2_modifier: "$MONUMENT_1048_NAME$"
+ monument_1048_level_3_modifier: "$MONUMENT_1048_NAME$"
+ monument_1049_level_0_modifier: "$MONUMENT_1049_NAME$"
+ monument_1049_level_1_modifier: "$MONUMENT_1049_NAME$"
+ monument_1049_level_2_modifier: "$MONUMENT_1049_NAME$"
+ monument_1049_level_3_modifier: "$MONUMENT_1049_NAME$"
+ monument_1050_level_0_modifier: "$MONUMENT_1050_NAME$"
+ monument_1050_level_1_modifier: "$MONUMENT_1050_NAME$"
+ monument_1050_level_2_modifier: "$MONUMENT_1050_NAME$"
+ monument_1050_level_3_modifier: "$MONUMENT_1050_NAME$"
+ monument_1051_level_0_modifier: "$MONUMENT_1051_NAME$"
+ monument_1051_level_1_modifier: "$MONUMENT_1051_NAME$"
+ monument_1051_level_2_modifier: "$MONUMENT_1051_NAME$"
+ monument_1051_level_3_modifier: "$MONUMENT_1051_NAME$"
+ monument_1052_level_0_modifier: "$MONUMENT_1052_NAME$"
+ monument_1052_level_1_modifier: "$MONUMENT_1052_NAME$"
+ monument_1052_level_2_modifier: "$MONUMENT_1052_NAME$"
+ monument_1052_level_3_modifier: "$MONUMENT_1052_NAME$"
+ monument_1053_level_0_modifier: "$MONUMENT_1053_NAME$"
+ monument_1053_level_1_modifier: "$MONUMENT_1053_NAME$"
+ monument_1053_level_2_modifier: "$MONUMENT_1053_NAME$"
+ monument_1053_level_3_modifier: "$MONUMENT_1053_NAME$"
+ monument_1054_level_0_modifier: "$MONUMENT_1054_NAME$"
+ monument_1054_level_2_modifier: "$MONUMENT_1054_NAME$"
+ monument_1054_level_2_modifier: "$MONUMENT_1054_NAME$"
+ monument_1054_level_3_modifier: "$MONUMENT_1054_NAME$"
+
 
