SAR Military limit added

--- a/localisation/english/MD_focus_HKG_l_english.yml
+++ b/localisation/english/MD_focus_HKG_l_english.yml
@@ -314,7 +314,7 @@
  HKG_idea_railway_development_strategy_2000: "Railway Development Strategy 2000"
  HKG_idea_railway_development_strategy_2000_desc: "Railway Development Strategy 2000 is plan to guide the MTR's development plan for the next ten years."
  #Tooltips
- Basic_Law_HKG_idea_tt: "§HThis idea will be cancalled after [HKG.GetFlag]Hong Kong Declare its §RIndependent.§!§!"
+ Basic_Law_HKG_idea_tt: "This idea will be cancalled after §H[HKG.GetFlag]Hong Kong§! Declare its §RIndependent.§!"
  HKG_millitary_block_tt: "§WAs a §YS.A.R§! of §O[CHI.GetFlag]China§!, §Y[HKG.GetFlag]Hong Kong§! is not allowed to have any army and cannot change its military policy.§!"
  HONG_KONG_POLITICS_TT: "\nThe Politics of §Y[HKG.GetFlag]Hong Kong§! could be devided into three camp, §C£HKG_Conservative Pro-establishment camp§!, §8£HKG_conservatism Pan-democracy camp§! and §G£generic_Nat_Populism_small Localist camp§!. Seats in the Legislative Council are decided by their approval ratings."
 
