--- a/localisation/english/monuments_l_english.yml
+++ b/localisation/english/monuments_l_english.yml
@@ -537,89 +537,89 @@
  MONUMENT_182_NAME: "Canal du Midi"
  MONUMENT_182_DESC: "The §Y$MONUMENT_182_NAME$§! is a 240 kilometers long canal in [This.GetName]. Originally named the §YCanal royal en Languedoc§! and renamed by French revolutionaries to §Y$MONUMENT_182_NAME$§! in 1789, the canal is considered one of the greatest construction works of the 17th century. It connects the Mediterranean Sea and the Atlantic Ocean, with the help of the §YCanal de Garonne§!."
 
- MONUMENT_1001_NAME: "Hotel Sipopo"
+ MONUMENT_1001_NAME: "Hotel Sipopo" ##Delete
  MONUMENT_1001_DESC: "The §Y$MONUMENT_1001_NAME$§! is a."
 
- MONUMENT_1002_NAME: "Shrine of Imam Ali"
+ MONUMENT_1002_NAME: "Shrine of Imam Ali" ##Delete
  MONUMENT_1002_DESC: "The §Y$MONUMENT_1002_NAME$§! is a."
 
- MONUMENT_1003_NAME: "Apollonia of Illyria"
+ MONUMENT_1003_NAME: "Apollonia of Illyria" ##Delete
  MONUMENT_1003_DESC: "The §Y$MONUMENT_1003_NAME$§! is a."
 
- MONUMENT_1004_NAME: "Timgad"
+ MONUMENT_1004_NAME: "Timgad" ##Delete
  MONUMENT_1004_DESC: "§Y$MONUMENT_1004_NAME$§! is a."
 
- MONUMENT_1005_NAME: "Vallnord Ski Resort"
+ MONUMENT_1005_NAME: "Vallnord Ski Resort" ##Delete
  MONUMENT_1005_DESC: "The §Y$MONUMENT_1005_NAME$§! is a."
 
- MONUMENT_1006_NAME: "Monastery of Geghard"
+ MONUMENT_1006_NAME: "Monastery of Geghard" ##Delete
  MONUMENT_1006_DESC: "The §Y$MONUMENT_1006_NAME$§! is a."
 
- MONUMENT_1007_NAME: ""
- MONUMENT_1007_DESC: ""
+ MONUMENT_1007_NAME: "Tsodilo Hills"
+ MONUMENT_1007_DESC: "The §Y$MONUMENT_1007_NAME$§! is a."
 
- MONUMENT_1008_NAME: ""
- MONUMENT_1008_DESC: ""
+ MONUMENT_1008_NAME: "Arly Pendjari Complex"
+ MONUMENT_1008_DESC: "The §Y$MONUMENT_1008_NAME$§! is a."
 
- MONUMENT_1009_NAME: ""
- MONUMENT_1009_DESC: ""
+ MONUMENT_1009_NAME: "Cidade Velha"
+ MONUMENT_1009_DESC: "§Y$MONUMENT_1009_NAME$§! is a."
 
- MONUMENT_1010_NAME: ""
- MONUMENT_1010_DESC: ""
+ MONUMENT_1010_NAME: "Khirokitia"
+ MONUMENT_1010_DESC: "§Y$MONUMENT_1010_NAME$§! is a."
 
- MONUMENT_1011_NAME: ""
- MONUMENT_1011_DESC: ""
+ MONUMENT_1011_NAME: "Kronborg"
+ MONUMENT_1011_DESC: "§Y$MONUMENT_1011_NAME$§! is a."
 
- MONUMENT_1012_NAME: ""
- MONUMENT_1012_DESC: ""
+ MONUMENT_1012_NAME: "Virunga National Park"
+ MONUMENT_1012_DESC: "The §Y$MONUMENT_1012_NAME$§! is a."
 
- MONUMENT_1013_NAME: ""
- MONUMENT_1013_DESC: ""
+ MONUMENT_1013_NAME: "Mlilwane Wildlife Sanctuary"
+ MONUMENT_1013_DESC: "The §Y$MONUMENT_1013_NAME$§! is a."
 
- MONUMENT_1014_NAME: ""
- MONUMENT_1014_DESC: ""
+ MONUMENT_1014_NAME: "Ivindo National Park"
+ MONUMENT_1014_DESC: "The §Y$MONUMENT_1014_NAME$§! is a."
 
- MONUMENT_1015_NAME: ""
- MONUMENT_1015_DESC: ""
+ MONUMENT_1015_NAME: "Fort Amsterdam"
+ MONUMENT_1015_DESC: "§Y$MONUMENT_1015_NAME$§! is a."
 
- MONUMENT_1016_NAME: ""
- MONUMENT_1016_DESC: ""
+ MONUMENT_1016_NAME: "Sky100"
+ MONUMENT_1016_DESC: "The §Y$MONUMENT_1016_NAME$§! is a."
 
- MONUMENT_1017_NAME: ""
- MONUMENT_1017_DESC: ""
+ MONUMENT_1017_NAME: "Changdeokgung Palace Complex"
+ MONUMENT_1017_DESC: "The §Y$MONUMENT_1017_NAME$§! is a."
 
- MONUMENT_1018_NAME: ""
- MONUMENT_1018_DESC: ""
+ MONUMENT_1018_NAME: "Maloti Drakensberg Park"
+ MONUMENT_1018_DESC: "The §Y$MONUMENT_1018_NAME$§! is a."
 
- MONUMENT_1019_NAME: ""
- MONUMENT_1019_DESC: ""
+ MONUMENT_1019_NAME: "Cyrene"
+ MONUMENT_1019_DESC: "§Y$MONUMENT_1019_NAME$§! is a."
 
- MONUMENT_1020_NAME: ""
- MONUMENT_1020_DESC: ""
+ MONUMENT_1020_NAME: "Cotai Strip"
+ MONUMENT_1020_DESC: "The §Y$MONUMENT_1020_NAME$§! is a."
 
- MONUMENT_1021_NAME: ""
- MONUMENT_1021_DESC: ""
+ MONUMENT_1021_NAME: "Kinabalu Park"
+ MONUMENT_1021_DESC: "The §Y$MONUMENT_1021_NAME$§! is a."
 
- MONUMENT_1022_NAME: ""
- MONUMENT_1022_DESC: ""
+ MONUMENT_1022_NAME: "Monaco Grand Prix"
+ MONUMENT_1022_DESC: "The §Y$MONUMENT_1022_NAME$§! is a."
 
- MONUMENT_1023_NAME: ""
- MONUMENT_1023_DESC: ""
+ MONUMENT_1023_NAME: "Namib"
+ MONUMENT_1023_DESC: "§Y$MONUMENT_1023_NAME$§! is a."
 
- MONUMENT_1024_NAME: ""
- MONUMENT_1024_DESC: ""
+ MONUMENT_1024_NAME: "Osun Osogbo"
+ MONUMENT_1024_DESC: "The §Y$MONUMENT_1024_NAME$§! is a."
 
- MONUMENT_1025_NAME: ""
- MONUMENT_1025_DESC: ""
+ MONUMENT_1025_NAME: "Nyungwe Forest"
+ MONUMENT_1025_DESC: "The §Y$MONUMENT_1025_NAME$§! is a."
 
- MONUMENT_1026_NAME: ""
- MONUMENT_1026_DESC: ""
+ MONUMENT_1026_NAME: "St. Moritz"
+ MONUMENT_1026_DESC: "§Y$MONUMENT_1026_NAME$§! is a."
 
- MONUMENT_1027_NAME: ""
- MONUMENT_1027_DESC: ""
+ MONUMENT_1027_NAME: "Taipei 101"
+ MONUMENT_1027_DESC: "The §Y$MONUMENT_1027_NAME$§! is a."
 
- MONUMENT_1028_NAME: ""
- MONUMENT_1028_DESC: ""
+ MONUMENT_1028_NAME: "Wat Arun"
+ MONUMENT_1028_DESC: "The §Y$MONUMENT_1028_NAME$§! is a."
 
  MONUMENT_1029_NAME: ""
  MONUMENT_1029_DESC: ""
