--- a/localisation/english/tank_modules_l_english.yml
+++ b/localisation/english/tank_modules_l_english.yml
@@ -1086,9 +1086,9 @@
  SOV_mbt_hull_4_desc: "The further development of domestic tank building allowed our designers to create a new tracked for the main combat vehicles. The first machine was the T-134 «Beer». The use of unified components, new chestsnets, the rational use of the internal space, as well as a new component made it possible to significantly reduce the cost of production, increase mobility and security."
 
  ## GERMANY ##
+ GER_tank_small_medium_cannon: "105 mm L7A1"
  GER_tank_small_medium_cannon: "105 mm L7A3"
- GER_tank_medium_cannon: "120 mm RH-120 L/44"
- GER_tank_medium_cannon_2: "120 mm RH-120 L/55"
+ GER_tank_medium_cannon_2: "120 mm RH-120 L/44"
  GER_tank_diesel_engine_gen1: "MB 837 A, 630 hp"
  GER_tank_diesel_engine_gen2: "MB 838 CaM 500, 819 hp"
  GER_tank_diesel_engine_gen4: "MTU MB 873 Ka-501, 1500 hp"
