--- a/localisation/english/MD_focus_HKG_l_english.yml
+++ b/localisation/english/MD_focus_HKG_l_english.yml
@@ -310,6 +310,8 @@
  HKG_idea_patriotic_education_reform_desc: "Patriotic education is missing from the existing Hong Kong education curriculum. We will add Liberal Studies to fill that gap."
  HKG_idea_chinese_based_education_reform: "Chinese-based Education Reform"
  HKG_idea_chinese_based_education_reform_desc: "All schools in Hong Kong must teach in Chinese. Our children must be able to speak Chinese."
+ HKG_idea_SARS_outbreak: "Impact of SARS"
+ HKG_idea_SARS_outbreak_desc: "SARS has had a huge impact on our society."
 
  HKG_idea_railway_development_strategy_2000: "Railway Development Strategy 2000"
  HKG_idea_railway_development_strategy_2000_desc: "Railway Development Strategy 2000 is plan to guide the MTR's development plan for the next ten years."
@@ -419,9 +421,12 @@
  hongkong_news.4.d: "Established in 1994 by a group of pro-Taiwan, pro-democracy and pro-business politicians, the 123 Democratic Alliance was dissolved because lacking of financial support from the Taiwan government, after the Kuomintang's defeat in its presidential election."
  hongkong_news.4.a: "A good news, isn't it?"
  hongkong_news.4.b: "Well...Got it."
- hongkong_news.5.t: "SARS outbreak in Hong Kong"
- hongkong_news.5.d: "China Mainland"
- hongkong_news.5.a: "Oh damn..."
+ hongkong_news.5.t: "SARS Outbreak"
+ hongkong_news.5.d: "An outbreak of a severe pneumonia virus known as \"SARS\" has occurred in Guangdong and Hong Kong. Despite claims by mainland officials that it has been effectively contained, the outbreak continues in Hong Kong. The WHO has now issued a travel warning to Southern China and Hong Kong. It says it poses a world health threat. So far one person has died as a result. The Hong Kong government has begun mandatory quarantine measures for those suspected of being infected."
+ hongkong_news.5.a: "Oh damn, our tourism is getting worse..."
+ hongkong_news.5.b: "Arrest the incompetent officials and deal with the outbreak in a transparent manner." 
+ hongkong_news.5.c: "We need to continue to hide the real data to maintain social stability."
+ hongkong_news.5.d: "Oh damn..."
  #Opinion Modifier
  HKG_european_bussiness_opinion: "Improve Trade with European Bussinessmen"
  HKG_chinese_entrepreneurs_opinion: "Improve Trade with Our Mainland Entrepreneurs"
