--- a/localisation/english/MD_ideas_l_english.yml
+++ b/localisation/english/MD_ideas_l_english.yml
@@ -347,6 +347,10 @@
  TAI_flight_crew_strike: "Taoyuan Flight Attendants Union strike"
  CHI_string_of_pearls: "String of Pearls"
  CHI_string_of_pearls_desc: "The String of Pearls is a network of naval bases encircling India that would give us a significant advantage in an armed conflict with India."
+ CHI_idea_SARS_outbreak: "SARS outbreak"
+ CHI_idea_SARS_outbreak_desc: "The severe pneumonia virus known as \"SARS\" is spreading in Guangdong Province and Beijing. Rumours of infectious diseases are jeopardizing our stability."
+ CHI_idea_SARS_outbreak_1_desc: "The severe pneumonia virus known as \"SARS\" is spreading in Guangdong Province and Beijing. With [CHI.GetLeader]'s permission, our transparent handling of the situation allowed the outbreak to be resolved quickly."
+ CHI_idea_SARS_outbreak_worse_desc: "The severe pneumonia virus known as \"SARS\" is spreading in the whole China. The concealment of the facts led to the further deterioration of the epidemic."
 
  #Korea
  KOR_joint_us_exercises: "Foal Eagle"
