--- a/localisation/english/MD_tooltips_l_english.yml
+++ b/localisation/english/MD_tooltips_l_english.yml
@@ -556,6 +556,8 @@
  MAC_millitary_block_tt: "§WAs a §YS.A.R§! of §O[CHI.GetFlag]China§!, §Y[MAC.GetFlag]Macau§! is not allowed to have any army and cannot change its military policy.§!"
  TIB_millitary_block_tt: "§WAs a §YS.A.R§! of §O[CHI.GetFlag]China§!, §Y[TIB.GetFlag]Xizang S.A.R§! is not allowed to have any army and cannot change its military policy.§!"
  ETK_millitary_block_tt: "§WAs a §YS.A.R§! of §O[CHI.GetFlag]China§!, §Y[ETK.GetFlag]Xinjiang S.A.R§! is not allowed to have any army and cannot change its military policy.§!"
+ CHI_SARS_worse: "Things are getting worse..."
+ CHI_SARS_better: "The outbreak will be resolved quickly."
 
  ##Things
  customs_union_tt: "§YCreates a Customs Union.§!\n"
