CHI spaa issue fixed

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -47,6 +47,7 @@ v1.10.2
   - Fixed the European Parliament Timer not working as intended
   - Fixed the idea ETA not being present on game start for Spain
   - Fixed a localization error where the Hezbollah Border War with Israel would give you Shia related descriptions despite being Israel
+  - Fixed bug that Chinese didn't have SPAA in 2000s
 
  Content:
   - New building "Commercialized Agriculture District"
