POL tech bonus fixes

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -48,6 +48,7 @@ v1.10.2
   - Fixed the idea ETA not being present on game start for Spain
   - Fixed a localization error where the Hezbollah Border War with Israel would give you Shia related descriptions despite being Israel
   - Fixed bug that Chinese didn't have SPAA in 2000s
+  - Fixed Polish military tech boosts not working with NSB and BBA dlcs
 
  Content:
   - New building "Commercialized Agriculture District"
