--- a/localisation/english/MD_focus_ITA_l_english.yml
+++ b/localisation/english/MD_focus_ITA_l_english.yml
@@ -714,7 +714,7 @@
  ITA_our_savoie: "Reclaim Savoy"
  ITA_our_savoie_desc: "Savoy was unlawfully given to the French when we needed their help against the Austrians during Risorgimento."
  ITA_our_corsica: "Reclaim Corsica"
- ITA_our_corsica_desc: "Corsica is geographically Italian and was ruled by Genoa for countless centuries, it's time to finally compelte the unification of our home region."
+ ITA_our_corsica_desc: "Corsica is geographically Italian and was ruled by Genoa for countless centuries, it's time to finally complete the unification of our home region."
  ITA_our_nizza: "Reclaim Nice"
  ITA_our_nizza_desc: "Nice was foolishly ceded to France along with Savoy during Risorgimento. It's time to to recover it to finally ocmplete our unification."
  ITA_recover_balkans: "Recover the Balkan Area"
