Squashed commit of the following:
commit 7fe207d9eb4ba68f80f3943e268b03fe90150623
Author: KianGhk1530 <KianGhkGit@gmail.com>
Date:   Sat Jun 22 17:44:15 2024 -0700

    PMC Icons

commit e21a270cc72e67e625fe1d0c5377b475fe2c3838
Author: AUG <48847923+lugdunum1715@users.noreply.github.com>
Date:   Sat Jun 22 23:51:53 2024 +0100

    typo

commit c6aa343e3092b142d7bdf89978a624c06b59d140
Merge: 0e6e028f89 895e1ab930
Author: AUG <48847923+lugdunum1715@users.noreply.github.com>
Date:   Sat Jun 22 23:36:58 2024 +0100

    Merge branch 'master' into gfx-input

commit 0e6e028f89a2eb7c6c440721fc01a9cf210dd291
Author: zhekumaqqe <fifatop2020@gmail.com>
Date:   Sun Jun 23 00:47:47 2024 +0300

    authors

commit f8955da9588bb14c52a8e4661a3f74e06cc971fa
Author: zhekumaqqe <fifatop2020@gmail.com>
Date:   Sun Jun 23 00:44:13 2024 +0300

    changelog

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -70,6 +70,9 @@ v1.10.2
   - Enlarged previously broken diplo actions backgrounds so that they fit the buttons accurately
   - Added event images to the European Union events
 
+ Localization:
+  - Major fixes and improvements to the Russian localization
+
  Modding Resources:
   - Added two modifiers "Base Migration Rate Value" and "Migration Rate Value Factor" for the Migration System
   - Added a modifier "Migration Control Cost Modifier" for the new Migration Control law
